--- a/Front/autostop/src/pages/home/home.html
+++ b/Front/autostop/src/pages/home/home.html
@@ -13,4 +13,20 @@
       CONNEXION
     </button>
   </div>
+
+  
+
+
+
+  //code to test timer
+
+
+  <div id="bottomButton">
+    <button ion-button full color="button" [navPush]="timer">
+      timer
+    </button>
+  </div>
+
+  // end code test timer
+
 </ion-content>
