SexButton, Logout, routing...

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -33,6 +33,15 @@
         CONTACTEZ-NOUS
       </button>
     </ion-list>
+    <button
+    ion-button
+    full
+    color="Danger"
+    type="submit"
+    (click)="SignOut()"
+  >
+    Déconnexion
+  </button>
   </ion-content>
 </ion-menu>
 
