Update fix, Disconnect button fix, login password fix, routing choicePage from loginPage

--- a/Front/autostop/src/pages/home/connexion/connexion.html
+++ b/Front/autostop/src/pages/home/connexion/connexion.html
@@ -13,7 +13,7 @@
     </ion-item>
     <ion-item>
       <ion-input
-        type="text"
+        type="password"
         formControlName="password"
         placeholder="Password"
       ></ion-input>
