--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -33,13 +33,11 @@
         CONTACTEZ-NOUS
       </button>
     </ion-list>
-    <button
-    ion-button
-    full
-    color="Danger"
+    <button ion-button 
+    color="danger" 
     type="submit"
     (click)="SignOut()"
-  >
+    >
     Déconnexion
   </button>
   </ion-content>
