--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
@@ -60,6 +60,11 @@
             ></ion-input>
           </ion-item> -->
      
+          <ion-item>
+            <input type="file" (change)="selectFile($event)">
+            <ion-button (click)="onUpload()">Upload!</button>
+          </ion-item>
+
           <button
             ion-button
             full
