Upload Image complet (avec la partie front)

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
@@ -62,8 +62,8 @@
      
           <ion-item>
             <input type="file" (change)="selectFile($event)">
-            <ion-button (click)="onUpload()">Upload!</button>
           </ion-item>
+          <button ion-button (click)="onUpload()">Upload!</button>
 
           <button
             ion-button
