--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -24,13 +24,14 @@
     </ion-item>
 
 
-    <ion-item>
-      <ion-input
-        type="text"
-        formControlName="color"
-        placeholder="Couleur du véhicule (remplacer par color picker)">
-      </ion-input>
-    </ion-item>
+		<ion-row class="colorselect color_{{color.slice(1,7)}}">
+			<ion-item>
+				<ion-label class="primarylabel">Color</ion-label>
+				<ion-select (click)="prepareColorSelector()" (ionChange)="setColor(this.color)" [(ngModel)]="color" [ngModelOptions]="{standalone: true}">
+					<ion-option (ionSelect)="selectColor(optioncolor)" *ngFor="let optioncolor of colors" [value]="optioncolor">{{optioncolor}}</ion-option>
+				</ion-select>
+			</ion-item>
+		</ion-row>
 
     <ion-item>
       <ion-input
