--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,3 +1,7 @@
+<button ion-button
+full
+color="button"
+(click)="getCenterRoute()">               CENTREROUTE           </button>
 <ion-content>
   <div id="map">
       <page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
