--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -8,7 +8,7 @@
       </ion-row>
         <ion-row>
             <ion-col col-6 offset-3>
-                <img class="avatarUser" [src]=matchableUser.imgUrl>
+                <img class="avatarUser" [src]=driver.imgUrl>
             </ion-col>
           </ion-row>
         <ion-row>
