--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -34,12 +34,10 @@
 		</ion-row>
 
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="imgCar"
-        placeholder="Image de la voiture">
-      </ion-input>
+      <input type="file" (change)="selectFile($event)">
     </ion-item>
+    <button ion-button (click)="onUpload()">Télécharger la photo de votre voiture!</button>
+    
 
     <button
       ion-button
