Driver avec image implementer dans le front et dans le back

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -20,7 +20,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-4 offset-4>
-              <img class="avatarUser" [src]=car.imgCar>
+              <img class="avatarUser" [src]=driver.imgCarUrl>
           </ion-col>
         </ion-row>
         <ion-row>
