--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -6,12 +6,17 @@
         <ion-input
           type="text"
           formControlName="licensePlate"
+          value="{{ driver.licensePlate }}"
           placeholder="Plaque d'immatriculation">
         </ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input type="text" formControlName="brand" placeholder="Constructeur automobile">
+      <ion-input 
+        type="text" 
+        formControlName="brand" 
+        value="{{ driver.brand }}"
+        placeholder="Constructeur automobile">
       </ion-input>
     </ion-item>
 
@@ -19,6 +24,7 @@
       <ion-input
         type="text"
         formControlName="model"
+        value="{{ driver.model }}"
         placeholder="Modèle">
       </ion-input>
     </ion-item>
@@ -27,7 +33,7 @@
 		<ion-row class="colorselect color_{{color.slice(1,7)}}">
 			<ion-item>
 				<ion-label class="primarylabel">Color</ion-label>
-				<ion-select (click)="prepareColorSelector()" (ionChange)="setColor(this.color)" [(ngModel)]="color" [ngModelOptions]="{standalone: true}">
+				<ion-select (click)="prepareColorSelector()" (ionChange)="setColor(this.color)" [(ngModel)]="driver.color" [ngModelOptions]="{standalone: true}">
 					<ion-option (ionSelect)="selectColor(optioncolor)" *ngFor="let optioncolor of colors" [value]="optioncolor">{{optioncolor}}</ion-option>
 				</ion-select>
 			</ion-item>
