Fixed toggle button for slide menu after logging out and cancelling trip

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
@@ -49,7 +49,7 @@
 
     </ion-grid>
 
-    <button ion-button color="button" block [navPush]="main">Envoyer évaluation</button>
+    <button ion-button color="button" block (click)="evaluate()">Envoyer évaluation</button>
 
       {{ rating }}
 
