--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -12,9 +12,9 @@
     </ion-item>
 
     <ion-item>
-      <ion-input 
-        type="text" 
-        formControlName="brand" 
+      <ion-input
+        type="text"
+        formControlName="brand"
         value="{{ driver.brand }}"
         placeholder="Constructeur automobile">
       </ion-input>
@@ -43,7 +43,7 @@
       <input type="file" (change)="selectFile($event)">
     </ion-item>
     <button ion-button (click)="onUpload()">Télécharger la photo de votre voiture!</button>
-    
+
 
     <button
       ion-button
@@ -52,7 +52,7 @@
       type="submit"
       (click)="validateForm(register.value)"
     >
-      CRÉER
+      METTRE A JOUR
     </button>
   </form>
 </ion-content>
