--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -30,8 +30,17 @@
         CONTACTEZ-NOUS
       </button>
     </ion-list>
-    <button ion-button 
-    color="danger" 
+    <!-- <ion-item>
+      <ion-toggle [(ngModel)]="user.isVehiculed" (click)="chooseMode()">CHANGE MODE</ion-toggle>
+    </ion-item> -->
+    <button ion-button
+    color="secondary"
+    (click)="chooseMode()"
+    >
+    Changer mode
+  </button>
+    <button ion-button
+    color="danger"
     type="submit"
     (click)="SignOut()"
     >
