--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -29,23 +29,18 @@
       <button ion-item (click)="onNavigate(contactPage)">
         CONTACTEZ-NOUS
       </button>
+
     </ion-list>
-    <!-- <ion-item>
-      <ion-toggle [(ngModel)]="user.isVehiculed" (click)="chooseMode()">CHANGE MODE</ion-toggle>
-    </ion-item> -->
-    <button ion-button
-    color="secondary"
-    (click)="chooseMode()"
-    >
-    Changer mode
-  </button>
+
+      <ion-toggle (ionChange)="chooseMode()">
+      </ion-toggle>
+
     <button ion-button
     color="danger"
     type="submit"
-    (click)="SignOut()"
-    >
+    (click)="SignOut()">
     Déconnexion
-  </button>
+    </button>
   </ion-content>
 </ion-menu>
 
