Ajout profil pedestrian front et back

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
@@ -4,7 +4,7 @@
 
 <ion-content padding>
   <ion-tabs color="menu" selectedIndex="2">
-    <ion-tab [root]="tab1Root" tabIcon="star"></ion-tab>
+    <ion-tab [root]="tab1Root" tabIcon="walk"></ion-tab>
     <ion-tab [root]="tab2Root" tabIcon="car"></ion-tab>
     <ion-tab [root]="tab3Root" tabIcon="person"></ion-tab>
   </ion-tabs>
