--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/pedestrian/pedestrian.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/pedestrian/pedestrian.html
@@ -2,14 +2,14 @@
     
     <form [formGroup]="updatePedestrian">
         <ion-item>
-            <ion-label step=100, snaps>radius variable value : {{ searchRadius }} meters</ion-label>
+            <ion-label step=100, snaps>Votre rayon de recherche est de : {{ pedestrian.searchRadius }} mètres autour de vous</ion-label>
             <ion-range min="100" max="5000" step="100" formControlName="searchRadius">
               <ion-icon small range-left name="expand"></ion-icon>
               <ion-icon range-right name="expand"></ion-icon>
             </ion-range>
           </ion-item>
         <ion-item>
-          <ion-input type="text" formControlName="passengersNumber" value="{{ updatePedestrian.passengersNumber }}" placeholder="Nombre de passagers">
+          <ion-input type="text" formControlName="passengersNumber" value="{{ pedestrian.passengersNumber }}" placeholder="Nombre de passagers">
           </ion-input>
         </ion-item>
       <button
