Changed mappingfor request for matchingDrivers / updated map when toggle is clicked / updated circle when searchRadius is modified / removed circle when driver mode chosen

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,4 +1,4 @@
-<ion-menu side="left" [content]="content" background-color="menu">
+<ion-menu side="left" [content]="content" background-color="menu" (ionClose)="menuClosed()">
   <ion-content class="custom">
     <div *ngIf="user.imgUrl">
       <img padding id="avatarUser" [src]="user.imgUrl">
@@ -46,4 +46,4 @@
 
 <ion-nav #content [root]="rootPage"></ion-nav>
 
-<page-map></page-map>
+<page-map ></page-map>
