--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -1,5 +1,5 @@
 
-<ion-content padding class="container">
+<ion-content *ngIf="driver" padding class="container" >
   <form [formGroup]="register">
 
     <ion-item>
