default value radius, interpolation & choice of passengers

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -31,9 +31,13 @@
       </button>
 
     </ion-list>
-
-      <ion-toggle (ionChange)="chooseMode()">
+    <!-- <ion-chip>
+      <img class="choiceIcons" src="../../../../assets/imgs/choicePage/driverIcon.png" alt="icône conducteur"> -->
+      <ion-toggle class="rainy-toggle" (ionChange)="chooseMode()">
       </ion-toggle>
+      <!-- <img class="choiceIcons" src="../../../../assets/imgs/choicePage/pedestrianIcon.png" alt="icône pieton">
+    </ion-chip> -->
+
 
     <button ion-button
     color="danger"
