--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
@@ -16,7 +16,7 @@
         </ion-row>
         <ion-row class="row">
           <ion-col>
-            <img class="avatarUser" [src]=matchableUser.imgUrl>
+            <img class="avatarUser" [src]="matchableUser.uploadPicture.fileDownloadUri">
           </ion-col>
         </ion-row>
         <ion-row class="row">
