--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/distance/distance.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/distance/distance.html
@@ -1,9 +1,9 @@
 <ion-content padding>
   <ion-item>
-    <ion-label step=100, snaps>radius variable value : {{ radius }} meters</ion-label>
-    <ion-range min="100" max="5000" step="100" [(ngModel)]="radius">
-      <ion-icon small range-left name="expand"></ion-icon>
-      <ion-icon range-right name="expand"></ion-icon>
+    <ion-label>radius variable value : {{ radius }} meters</ion-label>
+    <ion-range min="100" max="5000" step="100" snaps="true" [(ngModel)]="radius">
+      <ion-icon small slot="start" name="radio-button-off"></ion-icon>
+      <ion-icon slot="end" name="radio-button-off"></ion-icon>
     </ion-range>
   </ion-item>
 </ion-content>
