--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/pedestrian/pedestrian.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/pedestrian/pedestrian.html
@@ -1,16 +1,21 @@
 <ion-content padding>
-    
+
     <form [formGroup]="updatePedestrian">
         <ion-item>
-            <ion-label step=100, snaps>Votre rayon de recherche est de : {{ pedestrian.searchRadius }} mètres autour de vous</ion-label>
-            <ion-range min="100" max="5000" step="100" formControlName="searchRadius">
-              <ion-icon small range-left name="expand"></ion-icon>
-              <ion-icon range-right name="expand"></ion-icon>
+            <ion-label>Rayon de recherche : {{ pedestrian.searchRadius }} mètres.</ion-label>
+            <ion-range min="100" max="5000" step="100" formControlName="searchRadius" [(ngModel)]="pedestrian.searchRadius">
+              <ion-icon small range-left name="radio-button-off"></ion-icon>
+              <ion-icon range-right name="radio-button-off"></ion-icon>
             </ion-range>
           </ion-item>
         <ion-item>
-          <ion-input type="text" formControlName="passengersNumber" value="{{ pedestrian.passengersNumber }}" placeholder="Nombre de passagers">
-          </ion-input>
+          <ion-label>Nombre de passagers : {{ pedestrian.passengersNumber }}</ion-label>
+          <ion-select formControlName="passengersNumber" interface="popover">
+              <ion-option value=1>1</ion-option>
+              <ion-option value=2>2</ion-option>
+              <ion-option value=3>3</ion-option>
+              <ion-option value=4>4</ion-option>
+            </ion-select>
         </ion-item>
       <button
         ion-button
