--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -7,7 +7,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-10 offset-3>
-            <h1>{{ matchableUser.lastName }} {{ matchableUser.firstName }}</h1>
+            <h1>{{ matchableUser.firstName }} {{ matchableUser.lastName[0] }}.</h1>
           </ion-col>
         </ion-row>
           <ion-row>
