infos changed on linking

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -2,37 +2,40 @@
 
   <ion-grid>
       <ion-row>
-        <ion-col col-10 offset-1>
-            <h3>Votre demande a bien été acceptée par {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
+        <ion-col *ngIf="!this.matchableUser.vehiculed" col-10 offset-1>
+            <h3>Vous avec bien acceptée la demande de {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
         </ion-col>
+        <ion-col *ngIf="this.matchableUser.vehiculed" col-10 offset-1>
+          <h3>Votre demande a bien été acceptée par {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
+      </ion-col>
       </ion-row>
         <ion-row>
             <ion-col col-6 offset-3>
                 <img class="avatarUser" [src]="matchableUser.uploadPicture.fileDownloadUri">
             </ion-col>
           </ion-row>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col col-8 offset-2>
               <img class="stars"
               [src]="getStar(num)"
               *ngFor="let num of [1,2,3,4,5]">
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row>
-          <ion-col col-4 offset-4>
+          <ion-col *ngIf="this.matchableUser.vehiculed" col-4 offset-4>
               <img class="avatarUser" [src]="matchableUser.driver.uploadPicture.fileDownloadUri">
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col col-6 offset-3>
-              <h3>{{ car.brand }} {{ car.model }} {{ car.color }}
+          <ion-col *ngIf="this.matchableUser.vehiculed" col-6 offset-3>
+              <h3>{{ matchableUser.driver.brand }} {{ matchableUser.driver.model }} {{ matchableUser.driver.color }}
               </h3>
           </ion-col>
         </ion-row>
         <ion-row>
             <ion-col col-10 offset-1>
                 <button ion-button full color="button" icon-start>
-                    <ion-icon name="call"></ion-icon>Appeller
+                    <ion-icon name="call"></ion-icon>Appeller {{ matchableUser.phone }}
                 </button>
             </ion-col>
         </ion-row>
@@ -44,8 +47,8 @@
                 </button>
           </ion-col>
         </ion-row>
-        <button ion-button (click)="goToRate()" icon-start>
+        <!-- <button ion-button (click)="goToRate()" icon-start>
             <ion-icon name="star"></ion-icon>Noter le trajet
-        </button>
+        </button> -->
     </ion-grid>
 </ion-content>
