--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -40,7 +40,7 @@
     </ion-row>
     <ion-row>
       <ion-col col-10 offset-1>
-        <button ion-button full color="button" icon-start>
+        <button ion-button full color="button" icon-start (click)="call()">
           <ion-icon name="call"></ion-icon>Appeller
         </button>
       </ion-col>
