removed stars on modal

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
@@ -1,10 +1,10 @@
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>Conducteur</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
 
@@ -23,11 +23,11 @@
       </ion-col>
       </ion-row>
     <ion-row class="row">
-      <ion-col>
+      <!-- <ion-col>
           <img class="stars"
           [src]="getStar(num)"
           *ngFor="let num of [1,2,3,4,5]">
-      </ion-col>
+      </ion-col> -->
     </ion-row>
     <ion-row class="row">
       <ion-col>
@@ -57,7 +57,7 @@
       <button ion-button  full color="danger" (click)="declineRequest()">Annuler</button>
     </ion-col>
   </ion-row>
-  
+
 
 
 </ion-content>
