--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -11,11 +11,11 @@
           </ion-col>
         </ion-row>
           <ion-row>
-            <ion-col col-8 offset-3>
+            <!-- <ion-col col-8 offset-3>
               <img class="stars"
               [src]="getStar(num)"
               *ngFor="let num of [1,2,3,4,5]">
-            </ion-col>
+            </ion-col> -->
         </ion-row>
         <ion-row class="goToRow">
             <ion-col>
