--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -31,12 +31,8 @@
       </button>
 
     </ion-list>
-    <!-- <ion-chip>
-      <img class="choiceIcons" src="../../../../assets/imgs/choicePage/driverIcon.png" alt="icône conducteur"> -->
-      <ion-toggle class="rainy-toggle" (ionChange)="chooseMode()">
-      </ion-toggle>
-      <!-- <img class="choiceIcons" src="../../../../assets/imgs/choicePage/pedestrianIcon.png" alt="icône pieton">
-    </ion-chip> -->
+    <ion-toggle class="vehiculed-toggle" (ionChange)="chooseMode()">
+    </ion-toggle>
 
 
     <button ion-button
