--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -10,13 +10,14 @@
             <h1>{{ matchableUser.firstName }} {{ matchableUser.lastName[0] }}.</h1>
           </ion-col>
         </ion-row>
-          <ion-row>
-            <!-- <ion-col col-8 offset-3>
+        <!-- Affichage rating utilisateur -->
+        <!-- <ion-row>
+            <ion-col col-8 offset-3>
               <img class="stars"
               [src]="getStar(num)"
               *ngFor="let num of [1,2,3,4,5]">
-            </ion-col> -->
-        </ion-row>
+            </ion-col>
+        </ion-row> -->
         <ion-row class="goToRow">
             <ion-col>
                 <h3>Se rend à :</h3>
