--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the RegisterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar> <ion-title>Créer un compte</ion-title> </ion-navbar>
 </ion-header>
@@ -70,8 +64,7 @@
       color="button"
       type="submit"
       [disabled]="!register.valid"
-      (click)="validateForm(register.value)"
-    >
+      (click)="validateForm(register.value)">
       CRÉER
     </button>
   </form>
