--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
@@ -14,10 +14,13 @@
       </ion-col>
     </ion-row>
     <ion-row class="row">
-      <ion-col>
+      <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri!=null" >
         <img class="avatarUser" [src]="matchableUser.uploadPicture.fileDownloadUri">
       </ion-col>
-      </ion-row>
+      <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri==null" >
+        <img class="avatarUser" src="../../../../../../../assets/imgs/profileImg1.png">
+      </ion-col>
+    </ion-row>
     <ion-row class="row">
       <!-- <ion-col>
           <img class="stars"
