Toast for upload picture

--- a/Front/autostop/src/pages/home/register/driver-infos/driver-infos.html
+++ b/Front/autostop/src/pages/home/register/driver-infos/driver-infos.html
@@ -1,3 +1,6 @@
+<ion-header>
+  <ion-navbar> <ion-title>Décrivez votre véhicule</ion-title> </ion-navbar>
+</ion-header>
 
 <ion-content padding class="container">
   <form [formGroup]="register">
