--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.html
@@ -1,8 +1,8 @@
 
 <ion-content  padding class="container">
-    <!-- <div *ngIf="driver.imgCarUrl"> -->
+    <div *ngIf="driver.imgCarUrl">
         <img padding id="carImage" [src]="driver.imgCarUrl">
-      <!-- </div> -->
+      </div>
   <form [formGroup]="register">
 
     <ion-item>
