Modified front-end modals

--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div id="map">
       <page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
-      <button ion-button strong round color="button" [hidden]="polyline==null" (click)="sendTrip()" id="validateButton"> Valider ce trajet? </button>
+      <button ion-button strong round color="button" [hidden]="polyline==null" (click)="sendTrip()" id="validateButton"> Valider le trajet</button>
     </div>
 </ion-content>
