--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -1,46 +1,43 @@
 <ion-content padding>
   <ion-grid>
-      <ion-row>
-          <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri!=null" >
+    <ion-row>
+        <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri!=null" >
             <img class="avatarUser" [src]="matchableUser.uploadPicture.fileDownloadUri">
-          </ion-col>
-          <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri==null" >
+        </ion-col>
+        <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri==null" >
             <img class="avatarUser" src="../../../../../../assets/imgs/profileImg1.png">
-          </ion-col>
-          <img src="" >
-        </ion-row>
-        <ion-row>
-          <ion-col col-10 offset-3>
-            <h1>{{ matchableUser.firstName }} {{ matchableUser.lastName[0] }}.</h1>
-          </ion-col>
-        </ion-row>
-        <!-- Affichage rating utilisateur -->
-        <!-- <ion-row>
-            <ion-col col-8 offset-3>
-              <img class="stars"
-              [src]="getStar(num)"
-              *ngFor="let num of [1,2,3,4,5]">
-            </ion-col>
-        </ion-row> -->
-        <ion-row class="goToRow">
-            <ion-col>
-                <h3>Se rend à :</h3>
-                <p><ion-icon name="locate"></ion-icon>
+        </ion-col>
+    </ion-row>
+    <h3>{{ matchableUser.firstName }} {{ matchableUser.lastName[0] }}.</h3>
+    <!-- Affichage rating utilisateur -->
+    <!-- <ion-row>
+        <ion-col col-8 offset-3>
+            <img class="stars"
+            [src]="getStar(num)"
+            *ngFor="let num of [1,2,3,4,5]">
+        </ion-col>
+    </ion-row> -->
+    <ion-row class="goToRow">
+        <ion-col col-10 offset-1>
+            <h4>Se rend à :</h4>
+            <div id="direction">
+                <h4><ion-icon name="locate"></ion-icon>
                     {{ matchableUser.trip.destinationString }}
-                </p>
-            </ion-col>
-        </ion-row>
+                </h4>
+            </div>
+        </ion-col>
+    </ion-row>
 
-        <ion-row>
-            <ion-col col-10 offset-1>
-                <button ion-button full color="button" (click)="sendRequest()">Envoyer une demande</button>
-            </ion-col>
-        </ion-row>
+    <ion-row>
+        <ion-col col-10 offset-1>
+            <button ion-button full color="button" (click)="sendRequest()">Envoyer une demande</button>
+        </ion-col>
+    </ion-row>
 
-        <ion-row>
-            <ion-col col-10 offset-1>
-                <button ion-button  full color="danger" (click)="closeModal()">Annuler</button>
-          </ion-col>
-        </ion-row>
+    <ion-row>
+        <ion-col col-10 offset-1>
+            <button ion-button  full color="danger" (click)="closeModal()">Annuler</button>
+        </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
