Delete matching entity + response when declining request

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -66,6 +66,14 @@
         </button>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col col-8 offset-2>
+        <button ion-button full color="danger" (click)="gotToMap()" icon-start>
+          <ion-icon name="map"></ion-icon>Retour à la carte
+        </button>
+      </ion-col>
+    </ion-row>
     <!-- <button ion-button (click)="goToRate()" icon-start>
             <ion-icon name="star"></ion-icon>Noter le trajet
         </button> -->
