--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -3,10 +3,10 @@
     <div *ngIf="!matchableUser.vehiculed">
       <h3> Vous avez bien accepté la demande de : </h3>
       <ion-row>
-        <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri!=null" >
+        <ion-col *ngIf="matchableUser.uploadPicture.fileDownloadUri!=null" >
           <img class="avatarUser" [src]="matchableUser.uploadPicture.fileDownloadUri">
         </ion-col>
-        <ion-col col-6 offset-3 *ngIf="matchableUser.uploadPicture.fileDownloadUri==null" >
+        <ion-col *ngIf="matchableUser.uploadPicture.fileDownloadUri==null" >
           <img class="avatarUser" src="../../../../../../../../assets/imgs/profileImg1.png">
         </ion-col>
       </ion-row>
